@@ -115,3 +115,4 @@ Current
 	- Modules: added chanserv/set
 	- Modules: Added to nickset/set: set noexpire
 	- API: added account_name to get an account name via a grouped nick
+	- Modules: Added to chanserv/set: set noexpire
